# agentic-ragflow-dev-docs

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_zh_CN.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  setup_db.sql
devdocs_rag/: __init__.py  agentic_search.py  chunker.py  config.py  db.py  downloader.py  embedder.py  generator.py  indexer.py  mcp_server.py  metadata_enricher.py  retriever.py
src/: agentic_search.py  chunker.py  chunking_recommendations.py  config.py  db.py  downloader.py  embedder.py  generator.py  indexer.py  mcp_server.py  metadata_enricher.py  retriever.py
