[project]
name = "ragflow-dev-docs-mcp"
version = "0.1.0"
description = "MCP server for RAGFlow developer documentation — hybrid RAG with pgvector"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "httpx>=0.27.0",
    "openai>=1.60.0",
    "tiktoken>=0.8.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "click>=8.1.0",
    "rich>=13.9.0",
]

[project.scripts]
ragflow-docs = "cli:cli"
