[project]
name = "devdocs-rag"
version = "0.2.0"
description = "A Python RAG framework for Developer Docs QA and vibecoding — hybrid RAG with pgvector, agentic search, and MCP serving"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "httpx>=0.27.0",
    "openai>=1.60.0",
    "tiktoken>=0.8.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "click>=8.1.0",
    "rich>=13.9.0",
]

[project.scripts]
devdocs-rag = "cli:cli"
